chore: Configure DI ⚙️

--- a/LeHotel.Api/LeHotel.Api.csproj
+++ b/LeHotel.Api/LeHotel.Api.csproj
@@ -6,4 +6,8 @@
   <ItemGroup>
     <Folder Include="Controllers\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LeHotel.Infrastructure\LeHotel.Infrastructure.csproj" />
+  </ItemGroup>
 </Project>
