--- a/LeHotel.Application/LeHotel.Application.csproj
+++ b/LeHotel.Application/LeHotel.Application.csproj
@@ -1,5 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\LeHotel.Domain\LeHotel.Domain.csproj" />
   </ItemGroup>
 </Project>
