--- a/LeHotel.Domain/LeHotel.Domain.csproj
+++ b/LeHotel.Domain/LeHotel.Domain.csproj
@@ -1,1 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+  <ItemGroup>
+    <PackageReference Include="ErrorOr" Version="2.0.1" />
+  </ItemGroup>
+</Project>
