--- a/LeHotel.Application/LeHotel.Application.csproj
+++ b/LeHotel.Application/LeHotel.Application.csproj
@@ -2,7 +2,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.10.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
-    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="NetTopologySuite" Version="2.5.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LeHotel.Domain\LeHotel.Domain.csproj" />
